[gd_scene load_steps=5 format=3 uid="uid://cjwq17evldhg4"]

[ext_resource type="Script" path="res://map/mirror/light_beam/light_beam.gd" id="1_go6lc"]
[ext_resource type="Texture2D" uid="uid://c16gj0vy7k4js" path="res://map/mirror/light_beam/temp_light_beam.png" id="2_rwa13"]
[ext_resource type="Texture2D" uid="uid://cgkf2v3rtqwsr" path="res://map/mirror/light_beam/temp_light_end_point.png" id="3_wq3xp"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ua30d"]
b = Vector2(0, 0)

[node name="LightBeam" type="RayCast2D"]
target_position = Vector2(1024, 0)
collision_mask = 81
collide_with_areas = true
script = ExtResource("1_go6lc")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_rwa13")
offset = Vector2(0.5, 0)

[node name="HitZone" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 24

[node name="CollisionShape" type="CollisionShape2D" parent="HitZone"]
shape = SubResource("SegmentShape2D_ua30d")

[node name="EndPoints" type="Node2D" parent="."]

[node name="Start" type="Sprite2D" parent="EndPoints"]
texture = ExtResource("3_wq3xp")

[node name="End" type="Sprite2D" parent="EndPoints"]
texture = ExtResource("3_wq3xp")

[connection signal="area_entered" from="HitZone" to="." method="_on_hit_zone_area_entered"]
[connection signal="area_exited" from="HitZone" to="." method="_on_hit_zone_area_exited"]
[connection signal="body_entered" from="HitZone" to="." method="_on_hit_zone_body_entered"]
[connection signal="body_exited" from="HitZone" to="." method="_on_hit_zone_body_exited"]
